--- a/source/Tests.Unit/packages.config
+++ b/source/Tests.Unit/packages.config
@@ -1,11 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoFixture" version="2.10.0" targetFramework="net45" />
+  <package id="AutoFixture.AutoMoq" version="2.10.0" targetFramework="net45" />
+  <package id="AutoFixture.Idioms" version="2.10.0" targetFramework="net45" />
+  <package id="AutoFixture.Xunit" version="2.10.0" targetFramework="net45" />
+  <package id="Cavity.Core" version="1.1.0.814" targetFramework="net45" />
+  <package id="Cavity.Data.Csv" version="2.0.0.831" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.1.2" targetFramework="net45" />
   <package id="Microsoft.Owin" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.Cookies" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.OAuth" version="2.1.0" targetFramework="net45" />
+  <package id="Moq" version="4.2.1402.2112" targetFramework="net45" />
+  <package id="NBuilder" version="3.0.1.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.2" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="Should" version="1.1.20" targetFramework="net45" />
+  <package id="xunit" version="1.9.2" targetFramework="net45" />
+  <package id="xunit.extensions" version="1.9.0.1566" targetFramework="net45" />
 </packages>
