--- a/source/Web.Host/packages.config
+++ b/source/Web.Host/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="bootstrap" version="3.1.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net45" />
+  <package id="FontAwesome" version="4.0.3.1" targetFramework="net45" />
   <package id="jQuery" version="2.1.0" targetFramework="net45" />
   <package id="Knockout.Validation" version="1.0.1" targetFramework="net45" />
   <package id="knockoutjs" version="3.1.0" targetFramework="net45" />
