Tweaks to auth and playing with service stack and database options.

--- a/source/Data/packages.config
+++ b/source/Data/packages.config
@@ -10,4 +10,7 @@
   <package id="Microsoft.Owin.Security.OAuth" version="2.1.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.2" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="ServiceStack.Common" version="3.9.71" targetFramework="net45" />
+  <package id="ServiceStack.OrmLite.SqlServer" version="3.9.71" targetFramework="net45" />
+  <package id="ServiceStack.Text" version="3.9.71" targetFramework="net45" />
 </packages>
