--- a/source/Web.Host/Web.config
+++ b/source/Web.Host/Web.config
@@ -9,7 +9,11 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-Web.Host-20140423065228.mdf;Initial Catalog=aspnet-Web.Host-20140423065228;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="WoggleContext" connectionString="Server=localhost;Database=Woggle;User Id=WoggleUser; Password=%$Gr48P455W0Rd;Connection Timeout=3000;" providerName="System.Data.SqlClient" />
+
+    <!-- Remove From Live-->
+    <add name="AdminContext" connectionString="Server=localhost;Database=woggle;User Id=sa; Password=Fred1234;" providerName="System.Data.SqlClient" />
+
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -65,6 +69,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.1.0.0" newVersion="5.1.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
