--- a/source/Tests.Acceptance/App.config
+++ b/source/Tests.Acceptance/App.config
@@ -4,6 +4,10 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <connectionStrings>
+    <add name="WoggleContext" connectionString="Server=localhost;Database=Woggle_test;User Id=WoggleUser; Password=%$Gr48P455W0Rd;Connection Timeout=3000;" providerName="System.Data.SqlClient" />
+    <add name="AdminContext" connectionString="Server=localhost;Database=woggle_test;User Id=sa; Password=Fred1234;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -22,7 +26,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="xunit.extensions" publicKeyToken="8d05b1bb7a6fdb6c" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.9.0.1566" newVersion="1.9.0.1566" />
+        <bindingRedirect oldVersion="0.0.0.0-1.9.2.1705" newVersion="1.9.2.1705" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="xunit" publicKeyToken="8d05b1bb7a6fdb6c" culture="neutral" />
