--- a/source/Tests.Acceptance/packages.config
+++ b/source/Tests.Acceptance/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="3.3.1" targetFramework="net45" />
+  <package id="Autofac.Mvc5" version="3.2.1" targetFramework="net45" />
   <package id="AutoFixture" version="2.10.0" targetFramework="net45" />
   <package id="AutoFixture.AutoMoq" version="2.10.0" targetFramework="net45" />
   <package id="AutoFixture.Idioms" version="2.10.0" targetFramework="net45" />
@@ -18,6 +20,11 @@
   <package id="Microsoft.AspNet.Identity.Core" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="5.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.Bcl" version="1.1.7" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.2.18" targetFramework="net45" />
@@ -25,12 +32,14 @@
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.Cookies" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.OAuth" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Moq" version="4.2.1402.2112" targetFramework="net45" />
   <package id="NBuilder" version="3.0.1.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.2" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Should" version="1.1.20" targetFramework="net45" />
   <package id="Thinktecture.IdentityModel.Client" version="1.4.3" targetFramework="net45" />
+  <package id="Xbehave" version="1.1.0" targetFramework="net45" />
   <package id="xunit" version="1.9.2" targetFramework="net45" />
-  <package id="xunit.extensions" version="1.9.0.1566" targetFramework="net45" />
+  <package id="xunit.extensions" version="1.9.2" targetFramework="net45" />
 </packages>
