--- a/source/Tests.E2E/packages.config
+++ b/source/Tests.E2E/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="3.3.1" targetFramework="net45" />
+  <package id="Autofac.Mvc5" version="3.2.1" targetFramework="net45" />
   <package id="AutoFixture" version="2.10.0" targetFramework="net45" />
   <package id="AutoFixture.AutoMoq" version="2.10.0" targetFramework="net45" />
   <package id="AutoFixture.Idioms" version="2.10.0" targetFramework="net45" />
@@ -18,10 +20,14 @@
   <package id="Microsoft.AspNet.Identity.Core" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Mvc" version="5.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.Owin" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.Cookies" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.OAuth" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Moq" version="4.2.1402.2112" targetFramework="net45" />
   <package id="NBuilder" version="3.0.1.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.2" targetFramework="net45" />
