--- a/source/Web.Host/packages.config
+++ b/source/Web.Host/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
+  <package id="Autofac" version="3.3.1" targetFramework="net45" />
+  <package id="Autofac.Mvc5" version="3.2.1" targetFramework="net45" />
+  <package id="Autofac.WebApi2" version="3.2.1" targetFramework="net45" />
   <package id="bootstrap" version="3.1.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net45" />
   <package id="FontAwesome" version="4.0.3.1" targetFramework="net45" />
@@ -17,9 +20,12 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.1.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.OData" version="5.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net45" />
+  <package id="Microsoft.Data.Edm" version="5.6.0" targetFramework="net45" />
+  <package id="Microsoft.Data.OData" version="5.6.0" targetFramework="net45" />
   <package id="Microsoft.Owin" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net45" />
@@ -35,5 +41,11 @@
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
   <package id="Sammy.js" version="0.7.4" targetFramework="net45" />
+  <package id="ServiceStack" version="3.9.71" targetFramework="net45" />
+  <package id="ServiceStack.Common" version="3.9.71" targetFramework="net45" />
+  <package id="ServiceStack.OrmLite.SqlServer" version="3.9.14" targetFramework="net45" />
+  <package id="ServiceStack.Redis" version="3.9.11" targetFramework="net45" />
+  <package id="ServiceStack.Text" version="3.9.71" targetFramework="net45" />
+  <package id="System.Spatial" version="5.6.0" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
